posiGen_FullsendBox/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>FL-SHW</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Client Signed</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contracts Rejected by DC</fullName>
        </values>
        <values>
            <fullName>Contracts Submitted to DC</fullName>
        </values>
        <values>
            <fullName>Input Documents</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Lost - Cancelled After Install Started</fullName>
        </values>
        <values>
            <fullName>Lost - Not Feasible</fullName>
        </values>
        <values>
            <fullName>Not Qualified</fullName>
        </values>
        <values>
            <fullName>Release to Installer</fullName>
        </values>
        <values>
            <fullName>Reschedule Appointment</fullName>
        </values>
        <values>
            <fullName>Schedule Appointment</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Redeploy</fullName>
        <description>For redeploy systems where feasibility analysis happens before contract signing</description>
        <isActive>true</isActive>
        <values>
            <fullName>Client Signed</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contracts Approved</fullName>
        </values>
        <values>
            <fullName>Docusign Completed</fullName>
        </values>
        <values>
            <fullName>Docusign Sent</fullName>
        </values>
        <values>
            <fullName>Input Documents</fullName>
        </values>
        <values>
            <fullName>Layout Approval</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Lost - Cancelled After Install Started</fullName>
        </values>
        <values>
            <fullName>Lost - Layout Rejected</fullName>
        </values>
        <values>
            <fullName>Lost - Not Feasible</fullName>
        </values>
        <values>
            <fullName>Redeploy Contract Revision</fullName>
        </values>
        <values>
            <fullName>Redeploy Feasibility</fullName>
        </values>
        <values>
            <fullName>Redeploy Layout and Contract</fullName>
        </values>
        <values>
            <fullName>Redeploy Rejected by DC</fullName>
        </values>
        <values>
            <fullName>Redeploy Submitted to DC</fullName>
        </values>
        <values>
            <fullName>Release to Installer</fullName>
        </values>
        <values>
            <fullName>Reschedule Appointment</fullName>
        </values>
        <values>
            <fullName>Schedule Appointment</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SF2</fullName>
        <description>SF2</description>
        <isActive>true</isActive>
        <values>
            <fullName>Client Signed</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contract Revision</fullName>
        </values>
        <values>
            <fullName>Contracts Approved</fullName>
        </values>
        <values>
            <fullName>Contracts Rejected by DC</fullName>
        </values>
        <values>
            <fullName>Contracts Submitted to DC</fullName>
        </values>
        <values>
            <fullName>Docusign Completed</fullName>
        </values>
        <values>
            <fullName>Docusign Sent</fullName>
        </values>
        <values>
            <fullName>Feasibility Analysis</fullName>
        </values>
        <values>
            <fullName>Input Documents</fullName>
        </values>
        <values>
            <fullName>Layout Approval</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Lost - Cancelled After Install Started</fullName>
        </values>
        <values>
            <fullName>Lost - Layout Rejected</fullName>
        </values>
        <values>
            <fullName>Lost - Not Feasible</fullName>
        </values>
        <values>
            <fullName>Not Qualified</fullName>
        </values>
        <values>
            <fullName>Release to Installer</fullName>
        </values>
        <values>
            <fullName>Reschedule Appointment</fullName>
        </values>
        <values>
            <fullName>Schedule Appointment</fullName>
        </values>
        <values>
            <fullName>Transfer</fullName>
        </values>
        <values>
            <fullName>Unknown - Need to Research</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Solar Hot Water Heater</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Client Signed</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contracts Approved</fullName>
        </values>
        <values>
            <fullName>Contracts Rejected by DC</fullName>
        </values>
        <values>
            <fullName>Contracts Rejected by UW</fullName>
        </values>
        <values>
            <fullName>Contracts Submitted to DC</fullName>
        </values>
        <values>
            <fullName>Contracts Submitted to UW</fullName>
        </values>
        <values>
            <fullName>Docusign Completed</fullName>
        </values>
        <values>
            <fullName>Docusign Sent</fullName>
        </values>
        <values>
            <fullName>Feasibility Analysis</fullName>
        </values>
        <values>
            <fullName>Input Documents</fullName>
        </values>
        <values>
            <fullName>Layout Approval</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Lost - Cancelled After Install Started</fullName>
        </values>
        <values>
            <fullName>Lost - Layout Rejected</fullName>
        </values>
        <values>
            <fullName>Lost - Not Feasible</fullName>
        </values>
        <values>
            <fullName>Not Qualified</fullName>
        </values>
        <values>
            <fullName>Release to Installer</fullName>
        </values>
        <values>
            <fullName>Reschedule Appointment</fullName>
        </values>
        <values>
            <fullName>Schedule Appointment</fullName>
        </values>
        <values>
            <fullName>Unknown - Need to Research</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sunrise</fullName>
        <description>Military Bases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Docusign Completed</fullName>
        </values>
        <values>
            <fullName>Docusign Sent</fullName>
        </values>
        <values>
            <fullName>Feasibility Analysis</fullName>
        </values>
        <values>
            <fullName>Input Documents</fullName>
        </values>
        <values>
            <fullName>Layout Approval</fullName>
        </values>
        <values>
            <fullName>Lost - Cancelled After Install Started</fullName>
        </values>
        <values>
            <fullName>Lost - Not Feasible</fullName>
        </values>
        <values>
            <fullName>Release to Installer</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sunrun</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Client Signed</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Conduct Appointment</fullName>
        </values>
        <values>
            <fullName>Contract Revision</fullName>
        </values>
        <values>
            <fullName>Contracts Approved</fullName>
        </values>
        <values>
            <fullName>Contracts Rejected by DC</fullName>
        </values>
        <values>
            <fullName>Contracts Submitted to DC</fullName>
        </values>
        <values>
            <fullName>Docusign Completed</fullName>
        </values>
        <values>
            <fullName>Docusign Sent</fullName>
        </values>
        <values>
            <fullName>Feasibility Analysis</fullName>
        </values>
        <values>
            <fullName>Input Documents</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Lost - Cancelled After Install Started</fullName>
        </values>
        <values>
            <fullName>Lost - Not Feasible</fullName>
        </values>
        <values>
            <fullName>Release to Installer</fullName>
        </values>
        <values>
            <fullName>Reschedule Appointment</fullName>
        </values>
        <values>
            <fullName>Schedule Appointment</fullName>
        </values>
        <values>
            <fullName>Submitted to Sunrun</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ACH_Chosen__c</fullName>
        <formula>OR(ISPICKVAL( Financing_Bill_Payment_Options__c , &quot;Checking / Savings Acct (Auto-pay)&quot;),ISPICKVAL( Financing_Bill_Payment_Options__c , &quot;Credit Card Payments&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACH Chosen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACH_Payment_Date__c</fullName>
        <label>ACH Payment Date</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACS_Median_Income__c</fullName>
        <description>ACS 2013 5 year estimate median household income for census tract</description>
        <inlineHelpText>ACS 2013 5 year estimate median household income for census tract</inlineHelpText>
        <label>ACS Median Income</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Address_1__c</fullName>
        <formula>Account.BillingStreet</formula>
        <inlineHelpText>Account Address</inlineHelpText>
        <label>Account Address 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_City__c</fullName>
        <formula>Account.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_DOB__c</fullName>
        <formula>Account.PersonContact.Birthdate</formula>
        <label>Account DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Email__c</fullName>
        <formula>Account.PersonContact.Email</formula>
        <label>Account Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Employer_Contact_Name__c</fullName>
        <formula>Account.Employer_Contact_Name__c</formula>
        <label>Account Employer Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Employer_Phone__c</fullName>
        <formula>Account.Employer_Phone__c</formula>
        <label>Account Employer Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Employer__c</fullName>
        <formula>Account.PersonContact.Employer__c</formula>
        <label>Account Employer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Home_Phone__c</fullName>
        <formula>Account.PersonContact.HomePhone</formula>
        <label>Account Home Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>CASESAFEID(Account.Id)</formula>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Last_Name__c</fullName>
        <formula>Account.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Mobile__c</fullName>
        <formula>Account.PersonMobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Monthly_Income__c</fullName>
        <formula>Account.PersonContact.Monthly_Income__c</formula>
        <label>Account Monthly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Name_Text__c</fullName>
        <formula>Account.FirstName + &apos; &apos; + Account.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Numeric_ID__c</fullName>
        <formula>VALUE(Account.Numeric_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Numeric ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Phone__c</fullName>
        <formula>Account.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_SSN__c</fullName>
        <formula>Account.PersonContact.SSN__c</formula>
        <label>Account SSN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Secondary_Phone__c</fullName>
        <formula>Account.Secondary_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Secondary Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_State__c</fullName>
        <formula>Account.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Work_Phone__c</fullName>
        <formula>Account.PersonContact.OtherPhone</formula>
        <label>Account Work Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Zip__c</fullName>
        <formula>Account.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Ported_Over_Pre_SF2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is to make it clear that these address may not actually have come from the utility bills, but b/c this address is used on projects, cases, etc it needs to be filled out so we backfilled it for pre-SF2 Opportunities.</description>
        <inlineHelpText>This is to make it clear that these address may not actually have come from the utility bills, but b/c this address is used on projects, cases, etc it needs to be filled out so we backfilled it for pre-SF2 Opportunities.</inlineHelpText>
        <label>Address Ported Over Pre-SF2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age_Signed_to_Submitted__c</fullName>
        <formula>Contracts_Initially_Submitted_to_DC_Date__c - Contracts_Signed_Date__c</formula>
        <label>Age Signed to Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_for_Install_Complete__c</fullName>
        <description>If the PVI Placed In Service Date is null, take Today - Contracts approved, else take the PVI Placed In Service Date - Contracts Approved Date.</description>
        <formula>IF( ISNULL( PVI_Placed_In_Service_Date__c ) , TODAY() - Contracts_Approved_Date__c, PVI_Placed_In_Service_Date__c - Contracts_Approved_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age for Install Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_in_Feasibility__c</fullName>
        <description>The amount (in days) that the Opp has been in Feasibility Analysis since the Contract Approved Date.</description>
        <formula>IF(   ISNULL(PVA_Assessment_Complete_Date__c) , TODAY() - Contracts_Approved_Date__c, PVA_Assessment_Complete_Date__c - Contracts_Approved_Date__c)</formula>
        <label>Feasibility Analysis Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_of_Home__c</fullName>
        <inlineHelpText>Age of the Home (in years)</inlineHelpText>
        <label>Age of Home</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aging_Created_to_PIS__c</fullName>
        <formula>DATEVALUE( CreatedDate ) -  PVI_Placed_In_Service_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aging Created to PIS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aging_Reject_to_Approve__c</fullName>
        <formula>(CASE(MOD( Contracts_Rejected_By_DC_Date__c - DATE(1985,6,24),7), 

  0 , CASE( MOD( Contracts_Approved_Date__c - Contracts_Rejected_By_DC_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( Contracts_Approved_Date__c - Contracts_Rejected_By_DC_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( Contracts_Approved_Date__c - Contracts_Rejected_By_DC_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( Contracts_Approved_Date__c - Contracts_Rejected_By_DC_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( Contracts_Approved_Date__c - Contracts_Rejected_By_DC_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( Contracts_Approved_Date__c - Contracts_Rejected_By_DC_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( Contracts_Approved_Date__c - Contracts_Rejected_By_DC_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( Contracts_Approved_Date__c - Contracts_Rejected_By_DC_Date__c )/7)*5) )
  -1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aging Reject to Approve</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aging_Signed_to_Approve__c</fullName>
        <formula>(CASE(MOD( Initial_Contracts_Signed_Date__c - DATE(1985,6,24),7), 

  0 , CASE( MOD( Contracts_Approved_Date__c - Initial_Contracts_Signed_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( Contracts_Approved_Date__c - Initial_Contracts_Signed_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( Contracts_Approved_Date__c - Initial_Contracts_Signed_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( Contracts_Approved_Date__c - Initial_Contracts_Signed_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( Contracts_Approved_Date__c - Initial_Contracts_Signed_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( Contracts_Approved_Date__c - Initial_Contracts_Signed_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( Contracts_Approved_Date__c - Initial_Contracts_Signed_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( Contracts_Approved_Date__c - Initial_Contracts_Signed_Date__c )/7)*5) )
  -1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aging Signed to Approve</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aging_Submit_to_Approve__c</fullName>
        <formula>(CASE(MOD( Contracts_Finally_Submitted_to_DC_Date__c - DATE(1985,6,24),7), 

  0 , CASE( MOD( Contracts_Approved_Date__c - Contracts_Finally_Submitted_to_DC_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( Contracts_Approved_Date__c - Contracts_Finally_Submitted_to_DC_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( Contracts_Approved_Date__c - Contracts_Finally_Submitted_to_DC_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( Contracts_Approved_Date__c - Contracts_Finally_Submitted_to_DC_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( Contracts_Approved_Date__c - Contracts_Finally_Submitted_to_DC_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( Contracts_Approved_Date__c - Contracts_Finally_Submitted_to_DC_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( Contracts_Approved_Date__c - Contracts_Finally_Submitted_to_DC_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( Contracts_Approved_Date__c - Contracts_Finally_Submitted_to_DC_Date__c )/7)*5) )
  -1</formula>
        <label>Aging Submit to Approve</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aging_Submit_to_Reject__c</fullName>
        <formula>(CASE(MOD( Contracts_Initially_Submitted_to_DC_Date__c - DATE(1985,6,24),7), 

  0 , CASE( MOD( Contracts_Rejected_By_DC_Date__c - Contracts_Initially_Submitted_to_DC_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( Contracts_Rejected_By_DC_Date__c - Contracts_Initially_Submitted_to_DC_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( Contracts_Rejected_By_DC_Date__c - Contracts_Initially_Submitted_to_DC_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( Contracts_Rejected_By_DC_Date__c - Contracts_Initially_Submitted_to_DC_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( Contracts_Rejected_By_DC_Date__c - Contracts_Initially_Submitted_to_DC_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( Contracts_Rejected_By_DC_Date__c - Contracts_Initially_Submitted_to_DC_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( Contracts_Rejected_By_DC_Date__c - Contracts_Initially_Submitted_to_DC_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( Contracts_Rejected_By_DC_Date__c - Contracts_Initially_Submitted_to_DC_Date__c )/7)*5) )
  -1</formula>
        <label>Aging Submit to Reject</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement_Monthly_PV_Rate__c</fullName>
        <formula>CASE(Signed_PV_Lease_Size__c,
&quot;4.5&quot;,54.99,
&quot;6&quot;,69.99,
&quot;8&quot;,99.99,
99.99)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Monthly PV Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agreement_No_Units__c</fullName>
        <formula>CASE(Signed_PV_Lease_Size__c, 
&quot;4.5&quot;,18, 
&quot;6&quot;,24, 
&quot;8&quot;,32, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement No Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement_Payment_Total__c</fullName>
        <formula>CASE(Signed_PV_Lease_Size__c, 
&quot;4.5&quot;,13197.60, 
&quot;6&quot;,16797.60, 
&quot;8&quot;,23997.60, 
23997.60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Payment Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ambassador__Ambassador_Referred_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referring Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ambassador__Referred_By_Ambassador__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referring Ambassador</label>
        <referenceTo>Ambassador__Ambassador__c</referenceTo>
        <relationshipLabel>Referred Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ambassador__Short_Code__c</fullName>
        <label>Referring Short Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Household_Income__c</fullName>
        <inlineHelpText>Whoever fills out this field, please let your friendly neighborhood salesforce admin know. - Thank you</inlineHelpText>
        <label>Annual Household Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Appointment_Kept__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is updated from the field that is on the Task.</description>
        <label>Appointment Kept</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Appointment_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Appointment Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_DocuSign_Packet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved DocuSign Packet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_by_3rd_Party_Paid__c</fullName>
        <inlineHelpText>Enter Date Approved by 3rd Party &amp; Paid</inlineHelpText>
        <label>Approved by 3rd Party &amp; Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Are_Contracts_Approved__c</fullName>
        <formula>NOT(ISNULL( Contracts_Approved_Date__c )) || Install_Complete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Are Contracts Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_You_Interested_In_Solar_Hot_Water__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are You Interested In Solar Hot Water?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_black_panels_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are black panels required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_you_in_a_Homeowner_s_Association__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are you in a Homeowner&apos;s Association</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_you_past_due_on_your_electric_bill__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are you past due on your electric bill?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <description>Military Base Area</description>
        <inlineHelpText>Military Base Area</inlineHelpText>
        <label>Area</label>
        <picklist>
            <picklistValues>
                <fullName>Mid Fort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Fort</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Area_of_Home__c</fullName>
        <inlineHelpText>Are of home in square feet (not including garage)</inlineHelpText>
        <label>Area of Home (Square ft)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assessor_Owner_Name_1__c</fullName>
        <formula>Property__r.AssessorOwnerName1__c</formula>
        <label>Assessor Owner Name 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessor_Owner_Name_2__c</fullName>
        <formula>Property__r.AssessorOwnerName2__c</formula>
        <label>Assessor Owner Name 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessors_Page_Signed__c</fullName>
        <label>Assessor&apos;s Page - Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attic_Access__c</fullName>
        <label>Attic Access</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attic_Type__c</fullName>
        <label>Attic Type</label>
        <picklist>
            <picklistValues>
                <fullName>Interior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exterior</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Autopay_Method__c</fullName>
        <label>Autopay Method</label>
        <picklist>
            <picklistValues>
                <fullName>Checking/Savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debit/Credit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BB_Funding_Amount__c</fullName>
        <label>BB Funding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BB_Funding_Date__c</fullName>
        <label>BB Funding Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Routing_Number__c</fullName>
        <description>The Customer&apos;s Routing Number.</description>
        <label>Bank Routing Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Contact_E_mail__c</fullName>
        <formula>Account.PersonEmail</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill to Contact E-mail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Contact_Name__c</fullName>
        <formula>Account.FirstName  &amp; &quot; &quot; &amp; Account.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill to Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Contact_Phone__c</fullName>
        <formula>Account.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill to Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Packet_Approved_Date__c</fullName>
        <description>Filled from the PV Install Project via UpdateOppFromPVInstall Apex trigger.</description>
        <label>Billing Packet Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bonus_Amount__c</fullName>
        <label>Bonus Amount</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bonus_Paid_Date__c</fullName>
        <label>Bonus Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Booking_Date__c</fullName>
        <label>Booking Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Breaker_Box_Picture__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Breaker Box Picture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BrightPath_Design_Completed_date__c</fullName>
        <label>Pre-Assessment Design Completed date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BrightPath_Design_Requested_Date__c</fullName>
        <label>Pre-Assessment Design Requested Date</label>
        <type>Date</type>
    </fields>
</CustomObject>